; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/callback/extr_calldata.c_cd_serialize_string.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/callback/extr_calldata.c_cd_serialize_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32**)* @cd_serialize_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @cd_serialize_string(i32** %0) #0 {
  %2 = alloca i32**, align 8
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  store i32** %0, i32*** %2, align 8
  %5 = load i32**, i32*** %2, align 8
  %6 = call i64 @cd_serialize_size(i32** %5)
  store i64 %6, i64* %3, align 8
  %7 = load i32**, i32*** %2, align 8
  %8 = load i32*, i32** %7, align 8
  %9 = bitcast i32* %8 to i8*
  store i8* %9, i8** %4, align 8
  %10 = load i64, i64* %3, align 8
  %11 = load i32**, i32*** %2, align 8
  %12 = load i32*, i32** %11, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 %10
  store i32* %13, i32** %11, align 8
  %14 = load i64, i64* %3, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %1
  %17 = load i8*, i8** %4, align 8
  br label %19

18:                                               ; preds = %1
  br label %19

19:                                               ; preds = %18, %16
  %20 = phi i8* [ %17, %16 ], [ null, %18 ]
  ret i8* %20
}

declare dso_local i64 @cd_serialize_size(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
